syntax = "proto3";
package userop;
option go_package="./userop";
service Userop {
  rpc GetMessageList(MessageRequest) returns (MessageListResponse); //获取留言列表
  rpc CreateMessage(MessageRequest) returns (MessageResponse); //新建留言
  rpc GetFavList(UserFavRequest) returns(UserFavListResponse); //过滤收藏信息
  rpc AddUserFav(UserFavRequest) returns(Empty); //添加收藏
  rpc DeleteUserFav(UserFavRequest) returns(Empty); //删除收藏
  rpc GetUserFavDetail(UserFavRequest) returns(Empty); //查看用户是否已经收藏某件商品
  rpc GetAddressList(GetAddressRequest) returns (AddressListResponse); //获取收货地址
  rpc CreateAddress(GetAddressRequest) returns (AddressResponse);      //新建收货地址
  rpc UpdateAddress(GetAddressRequest) returns (Empty); //更新收货地址
  rpc DeleteAddress(GetAddressRequest) returns (Empty); //删除收货地址
}
message MessageRequest {
  int32 id = 1;
  int32 userId = 2;
  int32 messageType = 3;
  string subject = 4;
  string message = 5;
  string file = 6;
}
message MessageResponse {
  int32 id = 1;
  int32 userId = 2;
  int32 messageType = 3;
  string subject = 4;
  string message = 5;
  string file = 6;
}
message MessageListResponse {
  int32 total = 1;
  repeated MessageResponse data = 2;
}

message Empty{

}
message UserFavRequest{
  int32 userId = 1;
  int32 goodsId = 2;
}
message UserFavResponse{
  int32 userId = 1;
  int32 goodsId = 2;
}

message UserFavListResponse {
  int32 total = 1;
  repeated UserFavResponse data = 2;
}

message GetAddressRequest {
  int32 id = 1;
  int32 userId  = 2;
  string province = 3;
  string city = 4;
  string district = 5;
  string address = 6;
  string signerName = 7;
  string signerMobile = 8;
}

message  AddressResponse{
  int32 id = 1;
  int32 userId = 2;
  string province = 3;
  string city = 4;
  string district = 5;
  string address = 6;
  string signerName = 7;
  string signerMobile = 8;
}

message AddressListResponse {
  int32 total = 1;
  repeated AddressResponse data = 2;
}